[package]
name = "test_packaging"
version = "0.1.0"
authors = ["bv"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]} # Argument Parsing
glob = "0.3.0"
imgui-ext = "0.3.0"
